# deploying-machine-learning-models

./: .gitignore  Makefile  README.md  kaggle.json  pyproject.toml
.circleci/: config.yml
.github/actions/hello/: action.yml  index.js
.github/actions/hello-docker/: action.yml  entrypoint.sh
.github/workflows/: Makefile  config.yml  differential_test.yml  docker-setup.yml  heroku_deployment_docker.yml  homemade_action.yml  lint_check.yml  prepare-tox.yml  prepare-venv.yml  prepare_venv.yml  test_upload_model.yml  test_upload_nn_model.yml  test_upload_regression_model.yml
assignment-section-05/requirements/: test_requirements.txt
scripts/: fetch_kaggle_large_dataset.sh  publish_model.sh
section-04-research-and-development/: .01-machine-learning-pipeline-data-analysis.ipynb.icloud  01-machine-learning-pipeline-data-analysis.ipynb
section-07-ci-and-publishing/house-prices-api/: requirements.txt
section-07-ci-and-publishing/model-package/: less  tox.ini
section-07-ci-and-publishing/model-package/requirements/: requirements.txt  test_requirements.txt
section-08-deploying-with-containers/: Dockerfile
section-08-deploying-with-containers/house-prices-api/: test_requirements.txt
test/: first-run.py
