[tool.poetry]
name = "mle"
version = "0.1.0"
description = ""
authors = ["ldifer@me.com"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pandas = "^1.4.2"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
